@@ -34,7 +34,9 @@ int func(void) { return data; }
 cp foo.c foo.cpp
 C_pic_flag='-fpic -DPIC'
 AT_CHECK([$CC $CPPFLAGS $CFLAGS $C_pic_flag -c foo.c || exit 77],
-	 [], [ignore], [ignore])
+	 [], [stdout], [stderr])
+# The configure test for the PIC flag also checks for warnings.
+AT_CHECK([grep fpic stdout stderr && exit 77], [1])
 
 CXX_pic_flag='-fpic -DPIC'
 if $CXX $CPPFLAGS $CXXFLAGS $CXX_pic_flag -c foo.cpp; then :; else
@@ -46,6 +48,6 @@ AT_CHECK(["$abs_top_srcdir"/configure lt_cv_prog_compiler_pic="$C_pic_flag" ]dnl
 : ${MAKE=make}
 AT_CHECK([$MAKE], [], [stdout], [ignore])
 AT_CHECK([if ./libtool --features | grep 'enable shared libraries'; then ]dnl
-	 [  grep -e -fpic stdout; else exit 77; fi], [], [ignore], [ignore])
+	 [  grep ' -fpic' stdout; else exit 77; fi], [], [ignore], [ignore])
 
 AT_CLEANUP
